# rag_engine

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  main.py
app/api/: routes.py
app/celery/: celery_app.py  tasks.py
app/core/: db.py
app/models/: __init__.py  chunk.py  document.py
eval/: questions.example.yaml
