[project]
name = "rag_engine"
version = "0.1.0"
description = "Local RAG engine over internal docs (Markdown|PDF|code) with cited answers"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.49.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.50",
    "psycopg[binary]>=3.3.4",
    "pgvector>=0.4.2",
    "alembic>=1.18.4",
    "celery>=5.6.3",
    "sentence-transformers>=5.5.1",
    "httpx>=0.28.1",
    "pypdf>=6.13.1",
    "python-multipart>=0.0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.16",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
]
ui = [
    "streamlit>=1.58.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.14"

[tool.pytest.ini_options]
asyncio_mode = "auto"
